--- a/audiosearch/templates/music-home.html
+++ b/audiosearch/templates/music-home.html
@@ -32,7 +32,7 @@
         Music ranked by popularity according to the Echo Nest.
     </div>
 
-    {% with content=top div_id='top_artists' %}
+    {% with content=top_artists %}
         {% include "content_box.html" %}
     {% endwith %}
     
