--- a/audiosearch/templates/music-home.html
+++ b/audiosearch/templates/music-home.html
@@ -47,5 +47,14 @@
 {% include "ajax_source.html" %}
 {% include "ajax_debug.html" %}
 
+
+
+
+<pre> {% filter force_escape|print_context %} {% debug %} {% endfilter %} </pre>
+<pre> {% filter print_context|force_escape %} {% debug %} {% endfilter %} </pre>
+
+
+
+
 </body>
 </html>
