--- a/audiosearch/templates/content/content_box.html
+++ b/audiosearch/templates/content/content_box.html
@@ -5,7 +5,7 @@
 
             <!-- box title -->
             <div class="section-title left">
-                {{ content.title|title }}
+                {{ content.title|title}}
             </div>
 
             <!-- spinner -->
@@ -16,6 +16,9 @@
             {% endif %}
 
             <!-- table nav -->
+            <div class="section-title right">
+                {{ content.total_data }}
+            </div>
                 <!-- includes? -->
         </div>
 
