--- a/audiosearch/templates/content/content_box.html
+++ b/audiosearch/templates/content/content_box.html
@@ -2,41 +2,29 @@
 <div class="content center">
     <div class="container-table">
         <div class="header">
-
             <!-- box title -->
             <div class="section-title left">
                 {{ content.title|title}}
             </div>
 
             <!-- spinner -->
-            {% if content.is_pending %}
-                <div id="{{ content.div_id }}-spinner" class="spinner left">
+            {% if not content.echodata %}
+                <div id="{{ content.template_id }}-spinner" class="spinner left">
                     <img src="{{ STATIC_URL }}img/spinner.gif"></img>
                 </div>
             {% endif %}
-
-            <!-- table nav -->
-            <div class="section-title right">
-                {{ content.total_data }}
-            </div>
-                <!-- includes? -->
         </div>
 
         <!-- error/empty message -->
-        <div id="{{ content.div_id }}-notification" class="content-notification hide">
-        </div>
+        <div id="{{ content.template_id }}-notification" class="content-notification hide"></div>
 
         <!-- content table -->
-        <table>
-            <tbody id="{{ content.div_id }}-tbody">
-                {% if content.resource_data %}
-                    {% with resource_data=content.resource_data %}
-                        {% include "content_rows.html" %}
-                    {% endwith %}
-                {% else %}
-                    <!-- ZZZZZZZZZZZZZZz -->
-                {% endif %}
-            </tbody>
+        <table id="{{ content.template_id }}-table">
+            {% if content.echodata %}
+                {% include "content_rows.html" %}
+            {% else %}
+                <!-- ZZZZZZZZZZZZZZz -->
+            {% endif %}
         </table>
     </div>
 </div><!--END content box -->
