--- a/audiosearch/templates/static/ajax_debug.html
+++ b/audiosearch/templates/static/ajax_debug.html
@@ -1,5 +1,6 @@
 <script type="text/javascript">
     $('a#clear').click( function() { 
+        console.log ("???");
         remove_resource("{{ resource }}"); 
         return false; 
     });
