--- a/audiosearch/templates/static/ajax_source.html
+++ b/audiosearch/templates/static/ajax_source.html
@@ -1,13 +1,13 @@
 {% load audiosearch_tags %}
 
-{% for res in pending %}
+{% for resource in pending %}
 <script>
-    var div_id = '#' + '{{ res.div_id }}'; 
-    var qs = "{{ res.qstring|to_query_string }}";
-    var url = '{% url "ajax_retrieval" res.group res.category res.name %}' + '?' + qs;
+    var id = '#' + '{{ resource.template_id }}'; 
+    var qs = "{{ resource.qstring|build_query }}";
+    var url = '{% url "ajax_retrieve" resource.group resource.method resource.alias %}' + qs;
 
     setTimeout(function() {
-        dispatch(url, div_id, 0);
+        dispatch(url, id, 0);
     }, AJAX_INITIAL_SNOOZE);
 </script>
 {% endfor %}
