--- a/audiosearch/templates/static/ajax_source.html
+++ b/audiosearch/templates/static/ajax_source.html
@@ -2,12 +2,12 @@
 
 {% for resource in pending %}
 <script>
-    var id = '#' + '{{ resource.template_id }}'; 
-    var qs = "{{ resource.qstring|build_query }}";
-    var url = '{% url "ajax_retrieve" resource.group resource.method resource.alias %}' + qs;
+    var opts = {
+            'id': '{{ resource.template_key }}',
+            'url': '{% url "ajax_retrieve" resource.group resource.method %}',
+            'data': jQuery.parseJSON('{{ resource.querydict|escapejs }}')
+        };
 
-    setTimeout(function() {
-        dispatch(url, id, 0);
-    }, AJAX_INITIAL_SNOOZE);
+    setTimeout(function() {dispatch(opts);}, AJAX_INITIAL_SNOOZE);
 </script>
 {% endfor %}
