--- a/audiosearch/templates/base/head.html
+++ b/audiosearch/templates/base/head.html
@@ -13,6 +13,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
 <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
+<link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
 <!-- <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/header.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
