--- a/audiosearch/templates/base/head.html
+++ b/audiosearch/templates/base/head.html
@@ -14,7 +14,5 @@
 
 <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
-<!-- <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
-<link href="{{ STATIC_URL }}css/header.css" rel="stylesheet">
-<link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
-<link href="{{ STATIC_URL }}css/footer.css" rel="stylesheet"> -->
+<link href="{{ STATIC_URL }}css/music.css" rel="stylesheet">
+
