--- a/audiosearch/templates/base/base.html
+++ b/audiosearch/templates/base/base.html
@@ -1,9 +1,8 @@
-{% load audiosearch_tags %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     {% include "head.html" %}
+    {% block base_head %}{% endblock %}
     <title>
         {% block base_title %}audiosearch{% endblock %}
     </title>
@@ -12,7 +11,7 @@
 <body>
     <div id="page-wrapper">
 
-        {% include "navbar.html" %}
+        {% include "nav.html" %}
 
         <article>
             {% block base_article_header %}
