--- a/audiosearch/templates/base/base.html
+++ b/audiosearch/templates/base/base.html
@@ -26,6 +26,7 @@
         {% include "footer.html" %}
 
     </div><!-- END page-wrapper -->
-{% include "js_source.html" %}
+{% include "js-source.html" %}
+{{ RCKEY }}
 </body>
 </html>
