--- a/audiosearch/templates/music/music-home-base.html
+++ b/audiosearch/templates/music/music-home-base.html
@@ -14,7 +14,7 @@
 
 {% block base_article_header %}
 <header>
-    Popular Music
+    Popular Music (make 'next' page nav button have 500px + width)
 </header>
 {% endblock %}
 
