--- a/audiosearch/static/css/content.css
+++ b/audiosearch/static/css/content.css
@@ -48,3 +48,30 @@ section {
     margin-bottom: 20px;
     padding: 0;
 }
+
+/*
+    images
+*/
+section .image-wrap {
+    /*height: 100px;*/
+    /*margin-left: -130px;*/
+    /*margin-right: 20px;*/
+    /*width: 130px;*/
+    border: 1px solid #000;
+    color: #000;
+    float: left;
+    overflow: hidden;
+    position: relative;
+}
+section .image-wrap img {
+    /*min-height: 100%;*/
+    /*width: 130px;*/
+    bottom: -9999px;
+    display: block;
+    height: auto;
+    left: -9999px;
+    margin: auto;
+    position: absolute;
+    right: -9999px;
+    top: -9999px;
+}
